--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,15 @@
 					<excludeDevtools>false</excludeDevtools>
 				</configuration>
 			</plugin>
+			<plugin>
+                               <groupId>org.apache.maven.plugins</groupId>
+                               <artifactId>maven-deploy-plugin</artifactId>
+                               <version>2.8.2</version>
+                         </plugin>
+			 <plugin>
+                               <groupId>org.apache.maven.plugins</groupId>
+                               <artifactId>maven-deploy-plugin</artifactId>
+                               </plugin>
 		</plugins>
 	</build>
 
@@ -77,5 +86,11 @@
 			</build>
 		</profile>
 	</profiles>
+	  <distributionManagement>
+             <snapshotRepository>
+               <id>nexus-snapshots</id>
+               <url>http://23.96.5.186:8081/#browse/browse:maven_artifacts_jenkins/</url>
+            </snapshotRepository>
+  </distributionManagement>
 
 </project>
