--- a/pom.xml
+++ b/pom.xml
@@ -87,7 +87,7 @@
 	<distributionManagement>
 		<repository>
 			<id>nexus-releases</id>
-			<url>http://23.96.5.186:8081/#browse/browse:maven_artifacts_jenkins/</url>
+			<url>http://23.96.5.186:8081/#browse/browse:maven-snapshots/</url>
 		</repository>
 	</distributionManagement>	
 </project>
