--- a/pom.xml
+++ b/pom.xml
@@ -58,10 +58,32 @@
 				</configuration>
 			</plugin>
 			<plugin>
-                               <groupId>org.apache.maven.plugins</groupId>
-                               <artifactId>maven-deploy-plugin</artifactId>
-                               <version>2.8.2</version>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>2.8.2</version>
+				<configuration>
+					<skip>true</skip>
+				</configuration>
             </plugin>
+			<plugin>
+				<groupId>org.sonatype.plugins</groupId>
+				<artifactId>nexus-staging-maven-plugin</artifactId>
+				<version>1.3</version>
+				<executions>
+					<execution>
+						<id>default-deploy</id>
+						<phase>deploy</phase>
+						<goals>
+							<goal>deploy</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<serverId>nexus</serverId>
+					<nexusUrl>http://23.96.5.186:8081/nexus/</nexusUrl>
+					<skipStaging>true</skipStaging>
+				</configuration>
+			</plugin>
 
 		</plugins>
 	</build>
@@ -87,7 +109,7 @@
 	<distributionManagement>
 		<repository>
 			<id>nexus-releases</id>
-			<url>http://23.96.5.186:8081/#browse/browse:maven-snapshots/</url>
+			<url>http://23.96.5.186:8081/#browse/browse:maven_artifacts_jenkins/</url>
 		</repository>
 	</distributionManagement>	
 </project>
