--- a/pom.xml
+++ b/pom.xml
@@ -109,7 +109,7 @@
 	<distributionManagement>
 		<repository>
 			<id>nexus-releases</id>
-			<url>maven_artifacts_jenkins</url>
+			<url>http://23.96.5.186:8081/repository/maven_artifacts_jenkins/</url>
 		</repository>
 	</distributionManagement>	
 </project>
