--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
 	<groupId>pl.piomin.samples</groupId>
 	<artifactId>sample-spring-boot-on-kubernetes</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<version>1.2.0</version>
 
 	<properties>
 		<java.version>11</java.version>
@@ -109,7 +109,7 @@
 	<distributionManagement>
 		<repository>
 			<id>nexus-releases</id>
-			<url>http://23.96.5.186:8081/repository/maven_artifacts_jenkins/</url>
+			<url>http://23.96.5.186:8081/repository/maven-releases/</url>
 		</repository>
 	</distributionManagement>	
 </project>
